# libghost

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
examples/: CMakeLists.txt
examples/filesize/: CMakeLists.txt  README.md  filesize.c  filesize.lua  prompter.py
examples/prep/: CMakeLists.txt  README.md  plugin.c  plugin.h  prep.c  prep.h  tokenizer.c  tokenizer.h
examples/prep/examples/documents/plugindocs/: Makefile  embed.txt  index.txt  math.txt  table.txt  web.txt
examples/prep/examples/plugins/: embed.lua  math.lua  table.lua  web.lua
include/ghost/: alloc.h  byte_buffer.h  dynamic_array.h  embedded_jail.h  fdmem.h  flexible_list.h  ghost.h  ipc.h  result.h  rpc.h  sandbox.h  sha256provider.h  stdlib.h  strings.h  thread.h  typesystem.h  variable_list.h  variant.h
include/ghost/perms/: actreq.h  parser.h  pathfd.h  permexec.h  permfs.h  perms.h  procfd.h  prompt.h  request.h  writer.h
include/jail/: jail.h  lua.h  luajit-glue.h  subjail.h
src/: sha256provider_openssl.c
src/ghost/: alloc.c  byte_buffer.c  dynamic_array.c  embedded_jail.c  fdmem.c  flexible_list.c  ipc.c  result.c  rpc.c  sandbox.c  stdlib.c  strings.c  thread.c  typesystem.c  variable_list.c
src/ghost/perms/: actreq.c  parser.c  pathfd.c  permexec.c  permfs.c  perms.c  procfd.c  prompt.c  request.c  writer.c
src/jail/: jail.c  lua.c  luajit-glue.c  subjail.c
tests/: .gitignore  CMakeLists.txt  test.h  valgrind_fexecve.c  valgrind_workaround.c
tests/dynamic_array/: CMakeLists.txt  expanding_buffer.c  ints.c  strings.c
tests/flexible_list/: CMakeLists.txt  path_list.c
tests/malicious/: CMakeLists.txt  hijack-subjail.c  hijack-subjail.lua
tests/perms/: CMakeLists.txt  generic.c  generic.lua  parser.c  parser_input.ghperm  parser_input.txt  parser_output.ghperm  parser_output.txt  simple.c  simple.lua  simpletui_prompter.c
tests/sandbox/: CMakeLists.txt  hello_world.c  spawn.c  spawn_and_wait.c  std.c  std.lua  std.txt  test.lua  threading.c
tests/typesystem/: CMakeLists.txt  array_pointer.c  crossprocess_linked_list.c  linked_list.c  primitive.c  struct.c
tools/: cembed.py  codegen.py  enumgen.py  valgrind-execveat-fix.mbox
